Redesign wizard Step 1 with improved UX and fix test assertions
- Create ProductDto for grid data with order quantity
- Create StorefrontPresenter to separate backend access from view
- Redesign Step 1 with Grid in multiselection mode
- Add NumberField column for quantity input
- Add footer row showing totals (price and quantity)
- Use EuroConverter for price column formatting
- Wrap Previous/Next buttons in HorizontalLayout
- Set expandRatio on Grid for maximum space usage
- Fix test assertion using Label#setId instead of stream filtering
- Add SerializationDebugUtil.assertSerializable tests for view

Co-authored-by: TatuLund <14309836+TatuLund@users.noreply.github.com>